tests/ui/traits/non_lifetime_binders/late-const-param-wf.stderr
error: late-bound const parameters cannot be used currently
  --> $DIR/late-const-param-wf.rs:6:15
   |
LL |     for<const C: usize> [(); C]: Copy,
   |               ^

warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/late-const-param-wf.rs:1:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

